@@ -240,10 +240,10 @@
 \<sqsupset>             code: 0x002290  group: relation
 \<sqsubseteq>           code: 0x002291  group: relation  abbrev: [=
 \<sqsupseteq>           code: 0x002292  group: relation  abbrev: =]
-\<inter>                code: 0x002229  group: operator  abbrev: Int
-\<Inter>                code: 0x0022c2  group: operator  abbrev: Inter
-\<union>                code: 0x00222a  group: operator  abbrev: Un
-\<Union>                code: 0x0022c3  group: operator  abbrev: Union
+\<inter>                code: 0x002229  group: operator
+\<Inter>                code: 0x0022c2  group: operator
+\<union>                code: 0x00222a  group: operator
+\<Union>                code: 0x0022c3  group: operator
 \<squnion>              code: 0x002294  group: operator
 \<Squnion>              code: 0x002a06  group: operator
 \<sqinter>              code: 0x002293  group: operator
